--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   db:
     image: mariadb
-    container_name: db
+    container_name: mariadb
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: mydatabase
@@ -17,9 +17,9 @@ services:
     image: phpmyadmin/phpmyadmin
     container_name: pma
     links:
-      - db
+      - mariadb
     environment:
-      PMA_HOST: db
+      PMA_HOST: mariadb
       PMA_PORT: 3306
       PMA_ARBITRARY: 1
     restart: always
